# python-rabbit

poetry-demo/: pyproject.toml
poetry-demo/hello_world/: receive.py  send.py
poetry-demo/publish_subscribe/: emit_log.py  receive_logs.py
poetry-demo/routing/: emit_log_direct.py  receive_logs_direct.py
poetry-demo/rpc/: rcp_client.py  rpc_server.py
poetry-demo/topics/: emit_log_topic.py  receive_logs_topic.py
poetry-demo/work_queues/: new_task.py  worker.py
