[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["maciekole <24421260+maciekole@users.noreply.github.com>"]
readme = "README.md"
[tool.poetry.group.test]

[tool.poetry.group.docs]
optional = true

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"
pika = "^1"
[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"
[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
[tool.poetry.group.docs.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
